src/test/resources/Parser/SyntaxErrors/InterfaceSuperClass.front
interface I : A {}
class A {}